# ghostloop-desktop

./: .gitignore  CHANGELOG.md  README.md  package.json
.github/workflows/: ci.yml  release.yml
scripts/: build-sidecar.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: gamepad.rs  lib.rs  main.rs  notification.rs  sidecar.rs  voice.rs
