[package]
name = "ghostloop-desktop"
version = "0.2.0"
description = "Native desktop control panel for ghostloop."
authors = ["Joe Munene <joemunene984@gmail.com>"]
edition = "2021"
rust-version = "1.78"

[lib]
name = "ghostloop_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-notification = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gilrs = { version = "0.10", features = ["serde-serialize"] }
tokio = { version = "1", features = ["full"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[lints.rust]
unused_must_use = "warn"
